@@ -22,6 +22,7 @@ REST API
 Maintenance
 -----------
 
+* New modality manufacturer: "GE" for GE Healthcare EA and AW
 * Executing a query/retrieve from the REST API now creates a job
 * Fix: Closing DICOM associations after running query/retrieve from REST API
 
